backend-master/arcade/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arcade
spec:
  replicas: $REPLICAS
  selector:
    matchLabels:
      app: arcade
  template:
    metadata:
      labels:
        app: arcade
        timestamp: "$TIMESTAMP"
    spec:
      containers:
        - name: arcade
          image: gcr.io/$GCP_PROJECT/arcade-$ENVIRONMENT_NAME:latest
          resources:
            requests:
              memory: "$MEMORY_REQUEST"
              cpu: "$CPU_REQUEST"
          ports:
          - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
      tolerations:
        - key: "SERVICE_TYPE"
          operator: "Equal"
          value: "arcade"
          effect: "NoSchedule"
