backend-master/arcade/service.yml
apiVersion: v1
kind: Service
metadata:
  name: arcade-service-$ENVIRONMENT_NAME
  namespace: $ENVIRONMENT_NAME
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: arcade
  type: NodePort
